profile html added to task3 of 1

--- a/task3/index.html
+++ b/task3/index.html
@@ -14,6 +14,8 @@
         <p id="sum-el">Sum:</p>
         <button onclick="startGame()">START GAME</button>
         <button onclick="newCard()">NEW CARD</button>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda recusandae labore minima obcaecati voluptatibus? Aut enim odit tempore. Exercitationem nulla ad earum deserunt facere quam. Voluptas labore unde hic culpa eius et magni, dolor, numquam animi dolorem at porro aspernatur voluptatibus. Unde, aspernatur molestias sequi ipsa quas mollitia harum beatae? Maiores qui ea blanditiis. Inventore doloremque nisi corporis accusantium officia quod dicta, suscipit, velit ipsum ex quo totam aperiam dolor unde temporibus odit obcaecati, ut modi odio blanditiis hic eum accusamus architecto! Expedita facere explicabo dolores quisquam quam unde temporibus, officia necessitatibus a magni cum blanditiis ullam, omnis iure quae ipsum laboriosam sunt labore dolorem minima quo aut ut eius perferendis. Dicta blanditiis autem maiores ea tempora, ad at velit, explicabo officia, consectetur et possimus corporis deleniti ut? Culpa, officiis? Doloremque veniam beatae accusantium? Beatae in sit ut pariatur temporibus necessitatibus cupiditate dolores. Iusto quo maxime sequi natus temporibus soluta officia tempora adipisci cupiditate, pariatur error voluptatibus, magni minus, accusantium non? Voluptas architecto a nisi totam rem saepe quae nam vitae. Sed iusto veritatis quibusdam quam impedit dolore harum, modi ratione nesciunt fuga ipsam excepturi officiis vero molestiae voluptatibus maiores qui cum quis laudantium tempora. Atque commodi dignissimos officia velit?
+        </p>
         <script src="index.js"></script>
 </body>
 </html>
